--- a/src/components/scroll-form/scroll-form.module.css
+++ b/src/components/scroll-form/scroll-form.module.css
@@ -1,5 +1,4 @@
-
 .sticky {
   position: sticky;
-  top: 100px;
+  top: 0;
 }
